--- a/package.json
+++ b/package.json
@@ -9,12 +9,14 @@
   },
   "dependencies": {
     "@types/react-transition-group": "^4.4.1",
+    "luxon": "^1.26.0",
     "next": "10.0.7",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-icons": "^4.2.0",
     "react-transition-group": "^4.4.1",
-    "sass": "^1.32.7"
+    "sass": "^1.32.7",
+    "serverless-mysql": "^1.5.4"
   },
   "devDependencies": {
     "@types/node": "^14.14.28",
