--- a/package.json
+++ b/package.json
@@ -9,16 +9,20 @@
   },
   "dependencies": {
     "@types/react-transition-group": "^4.4.1",
+    "d3-ease": "^2.0.0",
     "luxon": "^1.26.0",
     "next": "10.0.7",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-icons": "^4.2.0",
+    "react-spring": "^8.0.27",
     "react-transition-group": "^4.4.1",
+    "react-with-gesture": "^4.0.8",
     "sass": "^1.32.7",
     "serverless-mysql": "^1.5.4"
   },
   "devDependencies": {
+    "@types/luxon": "^1.26.0",
     "@types/node": "^14.14.28",
     "@types/react": "^17.0.2",
     "typescript": "^4.1.5"
